added Oauth using passport js

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT= 8000
 JWT_SECRET= mysecret
 MONGO_URI= mongodb://localhost:27017/jwt_auth
 JWT_EXPIRES_IN=1d
+
+GOOGLE_CLIENT_ID=48905956977-g09adqlg65q2bumt690vkg5ap41dheev.apps.googleusercontent.com 
+GOOGLE_CLIENT_SECRET=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 
+GOOGLE_CALLBACK_URL=http://localhost:8000/api/oauth/google/callback
